# motool

./: .coveragerc  .editorconfig  .env  .gitignore  .gitlab-ci.yml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  Pipfile  README.md  plus_minus_multi.py  pyproject.toml  setup.cfg  setup.py  test_motools.py  vector_math.py
docs/: __init__.html  vector.html
momath/: __init__.py  vector.py
momath/test/: conftest.py  test_vector.py  test_vector_values.json
motools/: __init__.py  vector.py
motools/test/: test_vector.py
